# creating_MV

./: .gitignore  Dockerfile  README.md  generate_output.py  preprocess_data.py  pyproject.toml  requirements.txt  scrape_data.py  train_model.py
scripts/: generate_output  lora_train  multi_scrape  preprocess_data  scrape_data  train_model
src/creating_mv/: generate_output.py  lora_train.py  multi_scrape.py  scrape_data.py
